chore(db): rollback on error in get_db and controllable SQLAlchemy echo; update .env.example

--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,8 @@ PORT=5000
 # Hypercorn workers (increase for more concurrency)
 HYPERCORN_WORKERS=1
 
+# SQLAlchemy echo (set to true for debug; false in production)
+SQLALCHEMY_ECHO=false
+
 # If you want to persist the SQLite DB, set the host path and uncomment the volume in docker-compose.yml
 # SQLITE_PATH=./ecomdata.db
